// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`abis Computes a callstack item hash 1`] = `"0x17095bbb9e3e104dc520b6eec9338e9b6ce1fdc0f3a66b06d5ca90b15909ad0e"`;

exports[`abis Computes a callstack item request hash 1`] = `"0x28cb4c264eb11e13c77a5e60b251a6b3edfb4cfed786c4f1ec5e1749fede9b78"`;

exports[`abis Computes an empty nullifier hash  1`] = `"0x066e6cdc4a6ba5e4781deda650b0be6c12f975f064fc38df72c1060716759b17"`;

exports[`abis Computes an empty sideeffect hash  1`] = `"0x27b1d0839a5b23baf12a8d195b18ac288fcf401afb2f70b8a4b529ede5fa9fed"`;

exports[`abis compute public call stack item hash 1`] = `
Fr {
  "asBigInt": 6902726350534637945034037933577508446422215007904358955522461123516426791152n,
  "asBuffer": {
    "data": [
      15,
      66,
      205,
      254,
      91,
      241,
      101,
      117,
      214,
      154,
      136,
      128,
      223,
      11,
      120,
      249,
      245,
      174,
      102,
      132,
      69,
      153,
      88,
      179,
      36,
      144,
      98,
      110,
      24,
      250,
      168,
      240,
    ],
    "type": "Buffer",
  },
}
`;

exports[`abis compute secret message hash 1`] = `
Fr {
  "asBigInt": 6220068662483113241527007349428551778669520744131373768997518428761948042030n,
  "asBuffer": {
    "data": [
      13,
      192,
      111,
      33,
      103,
      226,
      205,
      25,
      173,
      247,
      56,
      209,
      243,
      132,
      105,
      215,
      248,
      191,
      241,
      226,
      107,
      2,
      152,
      22,
      232,
      35,
      11,
      205,
      106,
      182,
      51,
      46,
    ],
    "type": "Buffer",
  },
}
`;

exports[`abis compute tx hash 1`] = `
Fr {
  "asBigInt": 11028384086470399424960241201065432836500251313078792361310973684322431200173n,
  "asBuffer": {
    "data": [
      24,
      97,
      216,
      28,
      219,
      86,
      198,
      156,
      231,
      143,
      46,
      78,
      221,
      7,
      18,
      240,
      152,
      126,
      198,
      240,
      27,
      12,
      209,
      163,
      188,
      112,
      63,
      126,
      44,
      152,
      235,
      173,
    ],
    "type": "Buffer",
  },
}
`;

exports[`abis computes a function leaf 1`] = `
Fr {
  "asBigInt": 8957681167943973616438847631514238173699549883609341685749385526208761312950n,
  "asBuffer": {
    "data": [
      19,
      205,
      222,
      44,
      215,
      32,
      246,
      85,
      182,
      194,
      113,
      211,
      193,
      23,
      61,
      121,
      173,
      10,
      133,
      48,
      24,
      129,
      231,
      172,
      246,
      68,
      18,
      40,
      227,
      134,
      54,
      182,
    ],
    "type": "Buffer",
  },
}
`;

exports[`abis computes a function selector 1`] = `
{
  "data": [
    169,
    5,
    156,
    187,
  ],
  "type": "Buffer",
}
`;

exports[`abis computes commitment nonce 1`] = `
Fr {
  "asBigInt": 7653394882992289714855533169019502055399179742531912347686813547951736946253n,
  "asBuffer": {
    "data": [
      16,
      235,
      171,
      1,
      188,
      129,
      50,
      99,
      239,
      146,
      237,
      113,
      185,
      199,
      129,
      173,
      62,
      245,
      128,
      25,
      182,
      106,
      143,
      113,
      48,
      77,
      47,
      114,
      215,
      222,
      254,
      77,
    ],
    "type": "Buffer",
  },
}
`;

exports[`abis computes contract leaf 1`] = `
Fr {
  "asBigInt": 16936439505140127403707082829495438425474294111732402569080458144683824428771n,
  "asBuffer": {
    "data": [
      37,
      113,
      175,
      95,
      213,
      5,
      72,
      186,
      142,
      170,
      107,
      231,
      135,
      49,
      45,
      131,
      55,
      162,
      222,
      230,
      65,
      158,
      24,
      95,
      238,
      19,
      196,
      149,
      177,
      246,
      182,
      227,
    ],
    "type": "Buffer",
  },
}
`;

exports[`abis computes function tree root 1`] = `
Fr {
  "asBigInt": 18902231782334398705464257251364974449663398212058621439366133672872128659209n,
  "asBuffer": {
    "data": [
      41,
      202,
      72,
      183,
      227,
      53,
      212,
      51,
      133,
      173,
      223,
      25,
      183,
      14,
      155,
      5,
      105,
      58,
      143,
      86,
      204,
      9,
      239,
      140,
      187,
      195,
      116,
      164,
      13,
      173,
      191,
      9,
    ],
    "type": "Buffer",
  },
}
`;

exports[`abis computes public data tree leaf slot 1`] = `
Fr {
  "asBigInt": 9076808949980998475110411569159266589807853958487763065147292518713994520820n,
  "asBuffer": {
    "data": [
      20,
      17,
      74,
      179,
      219,
      221,
      10,
      28,
      204,
      92,
      79,
      230,
      141,
      213,
      118,
      243,
      198,
      205,
      121,
      112,
      135,
      112,
      224,
      106,
      180,
      8,
      99,
      152,
      205,
      216,
      40,
      244,
    ],
    "type": "Buffer",
  },
}
`;

exports[`abis computes public data tree value 1`] = `
Fr {
  "asBigInt": 3n,
  "asBuffer": {
    "data": [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      3,
    ],
    "type": "Buffer",
  },
}
`;

exports[`abis computes siloed commitment 1`] = `
Fr {
  "asBigInt": 7262347077404413274044670947879391583109741657896097604752287127491776887739n,
  "asBuffer": {
    "data": [
      16,
      14,
      87,
      192,
      122,
      182,
      219,
      134,
      244,
      174,
      67,
      245,
      167,
      212,
      53,
      92,
      87,
      197,
      161,
      226,
      82,
      55,
      70,
      224,
      251,
      22,
      172,
      41,
      240,
      220,
      59,
      187,
    ],
    "type": "Buffer",
  },
}
`;

exports[`abis computes siloed nullifier 1`] = `
Fr {
  "asBigInt": 10521714890263159342521589827909786073566333899903358017581007142888032736115n,
  "asBuffer": {
    "data": [
      23,
      67,
      20,
      95,
      222,
      16,
      62,
      170,
      136,
      175,
      87,
      110,
      5,
      98,
      230,
      29,
      133,
      235,
      165,
      144,
      253,
      223,
      1,
      209,
      149,
      80,
      228,
      240,
      36,
      112,
      147,
      115,
    ],
    "type": "Buffer",
  },
}
`;

exports[`abis computes unique commitment 1`] = `
Fr {
  "asBigInt": 13000121189816960667906065043973697710794195579570622293955220571859166513128n,
  "asBuffer": {
    "data": [
      28,
      189,
      206,
      206,
      196,
      254,
      146,
      246,
      99,
      142,
      182,
      168,
      218,
      222,
      150,
      202,
      53,
      142,
      203,
      164,
      149,
      76,
      245,
      151,
      195,
      99,
      25,
      159,
      174,
      61,
      71,
      232,
    ],
    "type": "Buffer",
  },
}
`;

exports[`abis computes zero contract leaf 1`] = `
Fr {
  "asBigInt": 0n,
  "asBuffer": {
    "data": [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "type": "Buffer",
  },
}
`;

exports[`abis hashes VK 1`] = `
{
  "data": [
    4,
    129,
    16,
    102,
    127,
    128,
    176,
    47,
    119,
    183,
    215,
    68,
    151,
    102,
    87,
    206,
    169,
    167,
    197,
    241,
    221,
    35,
    64,
    234,
    28,
    87,
    154,
    126,
    191,
    213,
    78,
    85,
  ],
  "type": "Buffer",
}
`;

exports[`abis hashes a tx request 1`] = `
{
  "data": [
    24,
    97,
    216,
    28,
    219,
    86,
    198,
    156,
    231,
    143,
    46,
    78,
    221,
    7,
    18,
    240,
    152,
    126,
    198,
    240,
    27,
    12,
    209,
    163,
    188,
    112,
    63,
    126,
    44,
    152,
    235,
    173,
  ],
  "type": "Buffer",
}
`;

exports[`abis hashes constructor info 1`] = `
Fr {
  "asBigInt": 8554563246648466207128694080427818093826588702256491720155365584899927973422n,
  "asBuffer": {
    "data": [
      18,
      233,
      182,
      18,
      27,
      239,
      249,
      139,
      157,
      45,
      92,
      189,
      121,
      152,
      157,
      73,
      211,
      211,
      253,
      135,
      52,
      199,
      134,
      233,
      242,
      74,
      6,
      239,
      86,
      0,
      30,
      46,
    ],
    "type": "Buffer",
  },
}
`;

exports[`abis hashes empty function args 1`] = `
Fr {
  "asBigInt": 0n,
  "asBuffer": {
    "data": [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "type": "Buffer",
  },
}
`;

exports[`abis hashes function args 1`] = `
Fr {
  "asBigInt": 13773950327711008256617416059663646210697922258755635023101062905870427579114n,
  "asBuffer": {
    "data": [
      30,
      115,
      199,
      148,
      191,
      130,
      160,
      100,
      98,
      205,
      48,
      10,
      124,
      139,
      218,
      39,
      47,
      30,
      253,
      79,
      200,
      107,
      56,
      53,
      41,
      130,
      26,
      237,
      106,
      243,
      98,
      234,
    ],
    "type": "Buffer",
  },
}
`;

exports[`abis hashes many function args 1`] = `
Fr {
  "asBigInt": 5019561503322397537490243039227402098195702132635946562396386724242519444026n,
  "asBuffer": {
    "data": [
      11,
      24,
      248,
      156,
      4,
      206,
      67,
      253,
      74,
      84,
      242,
      151,
      150,
      30,
      97,
      225,
      13,
      209,
      17,
      48,
      60,
      254,
      13,
      43,
      30,
      121,
      227,
      133,
      97,
      87,
      74,
      58,
    ],
    "type": "Buffer",
  },
}
`;
